--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,12 @@
 {
     "parser": "babel-eslint",
     "rules": {
-        "comma-dangle": 0
+        "comma-dangle": 0,
+        "import/no-cycle": 0
     },
-    "extends": ["airbnb-base"],
+    "extends": [
+        "airbnb-base"
+    ],
     "env": {
         "browser": true
     }
