--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-  "name": "webgl2sdftext",
-  "version": "1.0.1",
-  "description": "Shows how to render text in WebGL using the Signed Distance Field rendering technique.",
-  "main": "index.js",
-  "author": {
-    "name": "Gero Gerke",
-    "email": "webgl2sdftext@gerogerke.de",
-    "url": "https://gerogerke.de"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "raw-loader": "^0.5.1",
-    "webpack": "^4.12.0",
-    "webpack-dev-server": "^3.1.4"
-  },
-  "scripts": {
-    "dev": "webpack-dev-server --hot --inline",
-    "build": "NODE_ENV=production webpack"
-  },
-  "dependencies": {
-    "gl-mat4": "^1.1.4",
-    "webgl-debug": "^2.0.1"
-  }
+    "name": "webgl2sdftext",
+    "version": "1.0.1",
+    "description": "Shows how to render text in WebGL using the Signed Distance Field rendering technique.",
+    "main": "index.js",
+    "author": {
+        "name": "Gero Gerke",
+        "email": "webgl2sdftext@gerogerke.de",
+        "url": "https://gerogerke.de"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-eslint": "^10.0.1",
+        "babel-loader": "^8.0.4",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "copy-webpack-plugin": "^4.5.1",
+        "eslint": "^5.8.0",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-loader": "^2.0.0",
+        "eslint-plugin-import": "^2.9.0",
+        "eslint-plugin-jsx-a11y": "^6.0.3",
+        "raw-loader": "^0.5.1",
+        "webpack": "^4.12.0",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.4"
+    },
+    "scripts": {
+        "start": "webpack-dev-server --hot --inline",
+        "build": "NODE_ENV=production webpack"
+    },
+    "dependencies": {
+        "@babel/core": "^7.1.2",
+        "gl-mat4": "^1.2.0",
+        "webgl-debug": "^2.0.1"
+    }
 }
