--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js
 
 node_js:
-  - '5'
+  - 10
 
 matrix:
   fast_finish: true
 
 cache:
   directories:
-    - node_modules
+    - $HOME/.npm
 
 before_install:
   - npm prune
