--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "dependencies": {
         "@babel/core": "^7.1.2",
+        "@babel/preset-env": "^7.1.0",
         "gl-mat4": "^1.2.0",
         "webgl-debug": "^2.0.1"
     }
