Fix Babel setup for deployment

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
     "parser": "babel-eslint",
     "rules": {
         "comma-dangle": 0,
-        "import/no-cycle": 0
+        "import/no-cycle": 0,
+        "import/no-extraneous-dependencies": 0
     },
     "extends": [
         "airbnb-base"
