--- a/package.json
+++ b/package.json
@@ -10,29 +10,45 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "babel-core": "^6.26.0",
+        "@babel/core": "^7.2.2",
+        "@babel/plugin-proposal-class-properties": "^7.0.0",
+        "@babel/plugin-proposal-decorators": "^7.0.0",
+        "@babel/plugin-proposal-do-expressions": "^7.0.0",
+        "@babel/plugin-proposal-export-default-from": "^7.0.0",
+        "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+        "@babel/plugin-proposal-function-bind": "^7.0.0",
+        "@babel/plugin-proposal-function-sent": "^7.0.0",
+        "@babel/plugin-proposal-json-strings": "^7.0.0",
+        "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+        "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+        "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+        "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+        "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+        "@babel/plugin-syntax-import-meta": "^7.0.0",
+        "@babel/preset-env": "^7.3.1",
+        "@babel/preset-es2015": "^7.0.0-beta.53",
+        "@babel/register": "^7.0.0",
         "babel-eslint": "^10.0.1",
-        "babel-loader": "^8.0.4",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-stage-2": "^6.24.1",
+        "babel-loader": "^8.0.5",
         "copy-webpack-plugin": "^4.5.1",
-        "eslint": "^5.8.0",
+        "eslint": "^5.12.1",
         "eslint-config-airbnb": "^17.1.0",
         "eslint-loader": "^2.0.0",
         "eslint-plugin-import": "^2.9.0",
         "eslint-plugin-jsx-a11y": "^6.0.3",
-        "raw-loader": "^0.5.1",
-        "webpack": "^4.12.0",
+        "raw-loader": "^1.0.0",
+        "webpack": "^4.29.0",
         "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.4"
+        "webpack-dev-server": "^3.1.14"
     },
     "scripts": {
         "start": "webpack-dev-server --hot --inline",
         "build": "NODE_ENV=production webpack"
     },
     "dependencies": {
-        "@babel/core": "^7.1.2",
-        "@babel/preset-env": "^7.1.0",
+        "@babel/polyfill": "^7.2.5",
         "gl-mat4": "^1.2.0",
         "webgl-debug": "^2.0.1"
     }
