--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "webpack-dev-server": "^3.1.14"
     },
     "scripts": {
-        "start": "webpack-dev-server --hot --inline",
+        "dev": "webpack-dev-server --hot --inline",
         "build": "NODE_ENV=production webpack"
     },
     "dependencies": {
